# blog_os

./: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
kernel/: Cargo.toml
kernel/src/: acpi.rs  allocator.rs  corundum_bench.rs  corundum_test.rs  framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  logger.rs  main.rs  memory.rs  nfit.rs  pmem.rs  vmem.rs
kernel/src/pmem/: device.rs  ffi.rs  table.rs
kernel/src/task/: keyboard.rs
kernel/tests/: heap_allocation.rs  stack_overflow.rs
src/: main.rs
