[package]
name = "kernel"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader_api = "0.11.4"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.8"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"
log = "0.4.17"
noto-sans-mono-bitmap = { version = "0.2.0", features = ["regular", "size_16", "unicode-basic-latin", "unicode-specials"], default-features = false }
spinning_top = "0.2.4"
acpi = "4.1.1"
corundum = { features = ["no_std"], default-features = false, git = "https://github.com/imawizard/Corundum", branch = "no_std" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3.2"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]
